; ModuleID = '/home/carl/AnghaBench/vim.js/src/extr_if_tcl.c_tclupdatevars.c'
source_filename = "/home/carl/AnghaBench/vim.js/src/extr_if_tcl.c_tclupdatevars.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i8*, i8*, i32 }

@VARNAME_SIZE = common dso_local global i32 0, align 4
@VAR_RANGE1 = common dso_local global i8* null, align 8
@tclinfo = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@VAR_RANGE2 = common dso_local global i8* null, align 8
@VAR_RANGE3 = common dso_local global i8* null, align 8
@VAR_LBASE = common dso_local global i8* null, align 8
@curbuf = common dso_local global i32 0, align 4
@VAR_CURBUF = common dso_local global i8* null, align 8
@curwin = common dso_local global i32 0, align 4
@VAR_CURWIN = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @tclupdatevars to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tclupdatevars() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i64, align 8
  %3 = alloca i8*, align 8
  %4 = load i32, i32* @VARNAME_SIZE, align 4
  %5 = zext i32 %4 to i64
  %6 = call i8* @llvm.stacksave()
  store i8* %6, i8** %1, align 8
  %7 = alloca i8, i64 %5, align 16
  store i64 %5, i64* %2, align 8
  %8 = load i8*, i8** @VAR_RANGE1, align 8
  %9 = call i32 @strcpy(i8* %7, i8* %8)
  %10 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @tclinfo, i32 0, i32 2), align 8
  %11 = call i32 @Tcl_UpdateLinkedVar(i32 %10, i8* %7)
  %12 = load i8*, i8** @VAR_RANGE2, align 8
  %13 = call i32 @strcpy(i8* %7, i8* %12)
  %14 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @tclinfo, i32 0, i32 2), align 8
  %15 = call i32 @Tcl_UpdateLinkedVar(i32 %14, i8* %7)
  %16 = load i8*, i8** @VAR_RANGE3, align 8
  %17 = call i32 @strcpy(i8* %7, i8* %16)
  %18 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @tclinfo, i32 0, i32 2), align 8
  %19 = call i32 @Tcl_UpdateLinkedVar(i32 %18, i8* %7)
  %20 = load i8*, i8** @VAR_LBASE, align 8
  %21 = call i32 @strcpy(i8* %7, i8* %20)
  %22 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @tclinfo, i32 0, i32 2), align 8
  %23 = call i32 @Tcl_UpdateLinkedVar(i32 %22, i8* %7)
  %24 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @tclinfo, i32 0, i32 2), align 8
  %25 = load i32, i32* @curbuf, align 4
  %26 = call i8* @tclgetbuffer(i32 %24, i32 %25)
  store i8* %26, i8** %3, align 8
  %27 = load i8*, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @tclinfo, i32 0, i32 0), align 8
  %28 = load i8*, i8** %3, align 8
  %29 = call i32 @strcpy(i8* %27, i8* %28)
  %30 = load i8*, i8** @VAR_CURBUF, align 8
  %31 = call i32 @strcpy(i8* %7, i8* %30)
  %32 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @tclinfo, i32 0, i32 2), align 8
  %33 = call i32 @Tcl_UpdateLinkedVar(i32 %32, i8* %7)
  %34 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @tclinfo, i32 0, i32 2), align 8
  %35 = load i32, i32* @curwin, align 4
  %36 = call i8* @tclgetwindow(i32 %34, i32 %35)
  store i8* %36, i8** %3, align 8
  %37 = load i8*, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @tclinfo, i32 0, i32 1), align 8
  %38 = load i8*, i8** %3, align 8
  %39 = call i32 @strcpy(i8* %37, i8* %38)
  %40 = load i8*, i8** @VAR_CURWIN, align 8
  %41 = call i32 @strcpy(i8* %7, i8* %40)
  %42 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @tclinfo, i32 0, i32 2), align 8
  %43 = call i32 @Tcl_UpdateLinkedVar(i32 %42, i8* %7)
  %44 = load i8*, i8** %1, align 8
  call void @llvm.stackrestore(i8* %44)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @strcpy(i8*, i8*) #2

declare dso_local i32 @Tcl_UpdateLinkedVar(i32, i8*) #2

declare dso_local i8* @tclgetbuffer(i32, i32) #2

declare dso_local i8* @tclgetwindow(i32, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
